@@ -1,7 +1,7 @@
 CFLAGS = -g -I ../../include
 
 test.libpamc: test.libpamc.o
-	$(CC) -o $@ $< -L ../.. -lpamc
+	$(CC) -o $@ $(CFLAGS) $< -L ../.. -lpamc
 
 clean:
 	rm -f test.libpamc test.libpamc.o
