@@ -112,6 +112,8 @@ BerliOS Bugs are marked with (BerliOS #XXXX).
   (from Linux distributors - kukuk)
 * Add pam_xauth module (Bug 436440 - kukuk)
 * configure.in: Fix check for libcrypt (Bug 417704 - kukuk)
+* Add the "broken_shadow" argument to pam_unix, for ignoring errors
+  reading shadow information (from Linux distributors - kukuk)
 
 0.77: Mon Sep 23 10:25:42 PDT 2002
 
